name:                advent-of-code-y2016
version:             0.1.0.0
synopsis:            Adevent of Code 2016 solutions in Haskell
description:         Please see README.md
homepage:            https://github.com/AntonFagerberg/advent-of-code-y2016
license:             GPL-3
license-file:        LICENSE
author:              Anton Fagerberg
maintainer:          anton@antonfagerberg.com
copyright:           2016 Anton Fagerberg
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08, Day09, Day10, Day12, Day13, Day14, Day16, Day19, Day20, Day23, Day24, Day25
  build-depends:       base >= 4.7 && < 5
                     , regex-pcre
                     , containers
                     , cryptonite
                     , bytestring
                     , tuple
                     , split
  default-language:    Haskell2010

executable advent-of-code-y2016-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent-of-code-y2016
  default-language:    Haskell2010

test-suite advent-of-code-y2016-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent-of-code-y2016
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AntonFagerberg/advent-of-code-y2016
